input-sys/include/libinput.1.9.0.h


struct libinput_device;
struct libinput_event;
struct libinput_event_device_notify;
struct libinput_event_keyboard;
struct libinput_event_pointer;
struct libinput_event_touch;
struct libinput_event_tablet_tool;
struct libinput_event_tablet_pad;
enum libinput_key_state {
	LIBINPUT_KEY_STATE_RELEASED = 0,
	LIBINPUT_KEY_STATE_PRESSED = 1
};
struct libinput_event_switch;
enum libinput_event_type {
	LIBINPUT_EVENT_NONE = 0,
	LIBINPUT_EVENT_DEVICE_ADDED,
	LIBINPUT_EVENT_DEVICE_REMOVED,
	LIBINPUT_EVENT_KEYBOARD_KEY = 300,
	LIBINPUT_EVENT_POINTER_MOTION = 400,
	LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE,
	LIBINPUT_EVENT_POINTER_BUTTON,
	LIBINPUT_EVENT_POINTER_AXIS,
	LIBINPUT_EVENT_TOUCH_DOWN = 500,
	LIBINPUT_EVENT_TOUCH_UP,
	LIBINPUT_EVENT_TOUCH_MOTION,
	LIBINPUT_EVENT_TOUCH_CANCEL,
	LIBINPUT_EVENT_TOUCH_FRAME,
	LIBINPUT_EVENT_TABLET_TOOL_AXIS = 600,
	LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY,
	LIBINPUT_EVENT_TABLET_TOOL_TIP,
	LIBINPUT_EVENT_TABLET_TOOL_BUTTON,
	LIBINPUT_EVENT_TABLET_PAD_BUTTON = 700,
	LIBINPUT_EVENT_TABLET_PAD_RING,
	LIBINPUT_EVENT_TABLET_PAD_STRIP,
	LIBINPUT_EVENT_GESTURE_SWIPE_BEGIN = 800,
	LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE,
	LIBINPUT_EVENT_GESTURE_SWIPE_END,
	LIBINPUT_EVENT_GESTURE_PINCH_BEGIN,
	LIBINPUT_EVENT_GESTURE_PINCH_UPDATE,
	LIBINPUT_EVENT_GESTURE_PINCH_END,
	LIBINPUT_EVENT_SWITCH_TOGGLE = 900,
};
struct libinput_device *
libinput_event_get_device(struct libinput_event *event);
struct libinput_event_pointer *
libinput_event_get_pointer_event(struct libinput_event *event);
struct libinput_event_keyboard *
libinput_event_get_keyboard_event(struct libinput_event *event);
struct libinput_event_touch *
libinput_event_get_touch_event(struct libinput_event *event);
struct libinput_event_gesture *
libinput_event_get_gesture_event(struct libinput_event *event);
struct libinput_event_tablet_tool *
libinput_event_get_tablet_tool_event(struct libinput_event *event);
struct libinput_event_tablet_pad *
libinput_event_get_tablet_pad_event(struct libinput_event *event);
struct libinput_event_switch *
libinput_event_get_switch_event(struct libinput_event *event);
struct libinput_event_device_notify *
libinput_event_get_device_notify_event(struct libinput_event *event);
struct libinput_event *
libinput_event_device_notify_get_base_event(struct libinput_event_device_notify *event);
uint32_t
libinput_event_keyboard_get_time(struct libinput_event_keyboard *event);
uint64_t
libinput_event_keyboard_get_time_usec(struct libinput_event_keyboard *event);
uint32_t
libinput_event_keyboard_get_key(struct libinput_event_keyboard *event);
enum libinput_key_state
libinput_event_keyboard_get_key_state(struct libinput_event_keyboard *event);
struct libinput_event *
libinput_event_keyboard_get_base_event(struct libinput_event_keyboard *event);
uint32_t
libinput_event_keyboard_get_seat_key_count(
	struct libinput_event_keyboard *event);
uint32_t
libinput_event_pointer_get_time(struct libinput_event_pointer *event);
uint64_t
libinput_event_pointer_get_time_usec(struct libinput_event_pointer *event);
double
libinput_event_pointer_get_dx(struct libinput_event_pointer *event);
double
libinput_event_pointer_get_dy(struct libinput_event_pointer *event);
double
libinput_event_pointer_get_dx_unaccelerated(
	struct libinput_event_pointer *event);
struct libinput_event *
libinput_event_pointer_get_base_event(struct libinput_event_pointer *event);
struct libinput_event *
libinput_event_touch_get_base_event(struct libinput_event_touch *event);
struct libinput_event *
libinput_event_gesture_get_base_event(struct libinput_event_gesture *event);
struct libinput_event *
libinput_event_tablet_tool_get_base_event(struct libinput_event_tablet_tool *event);
struct libinput_event *
libinput_event_tablet_pad_get_base_event(struct libinput_event_tablet_pad *event);
struct libinput_event *
libinput_event_switch_get_base_event(struct libinput_event_switch *event);
struct libinput_device *
libinput_device_ref(struct libinput_device *device);
enum libinput_config_status {
	LIBINPUT_CONFIG_STATUS_SUCCESS = 0,	
	LIBINPUT_CONFIG_STATUS_UNSUPPORTED,	
	LIBINPUT_CONFIG_STATUS_INVALID,		
};
enum libinput_config_status
libinput_device_config_rotation_set_angle(struct libinput_device *device,
					  unsigned int degrees_cw);