input-sys/src/platforms/freebsd/x86/gen_1_9.rs

extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Return the device associated with this event. For device added/removed"]
    #[doc = " events this is the device added or removed. For all other device events,"]
    #[doc = " this is the device that generated the event."]
    #[doc = ""]
    #[doc = " This device is not refcounted and its lifetime is that of the event. Use"]
    #[doc = " libinput_device_ref() before using the device outside of this scope."]
    #[doc = ""]
    #[doc = " @return The device associated with this event"]
    pub fn libinput_event_get_device(event: *mut libinput_event) -> *mut libinput_device;
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Return the pointer event that is this input event. If the event type does"]
    #[doc = " not match the pointer event types, this function returns NULL."]
    #[doc = ""]
    #[doc = " The inverse of this function is libinput_event_pointer_get_base_event()."]
    #[doc = ""]
    #[doc = " @return A pointer event, or NULL for other events"]
    pub fn libinput_event_get_pointer_event(
        event: *mut libinput_event,
    ) -> *mut libinput_event_pointer;
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Return the keyboard event that is this input event. If the event type does"]
    #[doc = " not match the keyboard event types, this function returns NULL."]
    #[doc = ""]
    #[doc = " The inverse of this function is libinput_event_keyboard_get_base_event()."]
    #[doc = ""]
    #[doc = " @return A keyboard event, or NULL for other events"]
    pub fn libinput_event_get_keyboard_event(
        event: *mut libinput_event,
    ) -> *mut libinput_event_keyboard;
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Return the touch event that is this input event. If the event type does"]
    #[doc = " not match the touch event types, this function returns NULL."]
    #[doc = ""]
    #[doc = " The inverse of this function is libinput_event_touch_get_base_event()."]
    #[doc = ""]
    #[doc = " @return A touch event, or NULL for other events"]
    pub fn libinput_event_get_touch_event(event: *mut libinput_event) -> *mut libinput_event_touch;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libinput_event_gesture {
    _unused: [u8; 0],
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Return the gesture event that is this input event. If the event type does"]
    #[doc = " not match the gesture event types, this function returns NULL."]
    #[doc = ""]
    #[doc = " The inverse of this function is libinput_event_gesture_get_base_event()."]
    #[doc = ""]
    #[doc = " @return A gesture event, or NULL for other events"]
    pub fn libinput_event_get_gesture_event(
        event: *mut libinput_event,
    ) -> *mut libinput_event_gesture;
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Return the tablet tool event that is this input event. If the event type"]
    #[doc = " does not match the tablet tool event types, this function returns NULL."]
    #[doc = ""]
    #[doc = " The inverse of this function is libinput_event_tablet_tool_get_base_event()."]
    #[doc = ""]
    #[doc = " @return A tablet tool event, or NULL for other events"]
    pub fn libinput_event_get_tablet_tool_event(
        event: *mut libinput_event,
    ) -> *mut libinput_event_tablet_tool;
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Return the tablet pad event that is this input event. If the event type does not"]
    #[doc = " match the tablet pad event types, this function returns NULL."]
    #[doc = ""]
    #[doc = " The inverse of this function is libinput_event_tablet_pad_get_base_event()."]
    #[doc = ""]
    #[doc = " @return A tablet pad event, or NULL for other events"]
    pub fn libinput_event_get_tablet_pad_event(
        event: *mut libinput_event,
    ) -> *mut libinput_event_tablet_pad;
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Return the switch event that is this input event. If the event type does"]
    #[doc = " not match the switch event types, this function returns NULL."]
    #[doc = ""]
    #[doc = " The inverse of this function is libinput_event_switch_get_base_event()."]
    #[doc = ""]
    #[doc = " @return A switch event, or NULL for other events"]
    pub fn libinput_event_get_switch_event(
        event: *mut libinput_event,
    ) -> *mut libinput_event_switch;
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " Return the device event that is this input event. If the event type does"]
    #[doc = " not match the device event types, this function returns NULL."]
    #[doc = ""]
    #[doc = " The inverse of this function is"]
    #[doc = " libinput_event_device_notify_get_base_event()."]
    #[doc = ""]
    #[doc = " @return A device event, or NULL for other events"]
    pub fn libinput_event_get_device_notify_event(
        event: *mut libinput_event,
    ) -> *mut libinput_event_device_notify;
}
extern "C" {
    #[doc = " @ingroup event"]
    #[doc = ""]
    #[doc = " @return The generic libinput_event of this event"]
    pub fn libinput_event_device_notify_get_base_event(
        event: *mut libinput_event_device_notify,
    ) -> *mut libinput_event;
}
extern "C" {
    #[doc = " @ingroup event_keyboard"]
    #[doc = ""]
    #[doc = " @note Timestamps may not always increase. See @ref event_timestamps for"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " @return The event time for this event"]
    pub fn libinput_event_keyboard_get_time(event: *mut libinput_event_keyboard) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_keyboard"]
    #[doc = ""]
    #[doc = " @note Timestamps may not always increase. See @ref event_timestamps for"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " @return The event time for this event in microseconds"]
    pub fn libinput_event_keyboard_get_time_usec(event: *mut libinput_event_keyboard) -> u64;
}
extern "C" {
    #[doc = " @ingroup event_keyboard"]
    #[doc = ""]
    #[doc = " @return The keycode that triggered this key event"]
    pub fn libinput_event_keyboard_get_key(event: *mut libinput_event_keyboard) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_keyboard"]
    #[doc = ""]
    #[doc = " @return The state change of the key"]
    pub fn libinput_event_keyboard_get_key_state(
        event: *mut libinput_event_keyboard,
    ) -> libinput_key_state;
}
extern "C" {
    #[doc = " @ingroup event_keyboard"]
    #[doc = ""]
    #[doc = " @return The generic libinput_event of this event"]
    pub fn libinput_event_keyboard_get_base_event(
        event: *mut libinput_event_keyboard,
    ) -> *mut libinput_event;
}
extern "C" {
    #[doc = " @ingroup event_keyboard"]
    #[doc = ""]
    #[doc = " For the key of a @ref LIBINPUT_EVENT_KEYBOARD_KEY event, return the total number"]
    #[doc = " of keys pressed on all devices on the associated seat after the event was"]
    #[doc = " triggered."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_KEYBOARD_KEY. For other events, this function returns 0."]
    #[doc = ""]
    #[doc = " @return The seat wide pressed key count for the key of this event"]
    pub fn libinput_event_keyboard_get_seat_key_count(event: *mut libinput_event_keyboard) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " @note Timestamps may not always increase. See @ref event_timestamps for"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " @return The event time for this event"]
    pub fn libinput_event_pointer_get_time(event: *mut libinput_event_pointer) -> u32;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " @note Timestamps may not always increase. See @ref event_timestamps for"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " @return The event time for this event in microseconds"]
    pub fn libinput_event_pointer_get_time_usec(event: *mut libinput_event_pointer) -> u64;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the delta between the last event and the current event. For pointer"]
    #[doc = " events that are not of type @ref LIBINPUT_EVENT_POINTER_MOTION, this"]
    #[doc = " function returns 0."]
    #[doc = ""]
    #[doc = " If a device employs pointer acceleration, the delta returned by this"]
    #[doc = " function is the accelerated delta."]
    #[doc = ""]
    #[doc = " Relative motion deltas are to be interpreted as pixel movement of a"]
    #[doc = " standardized mouse. See @ref motion_normalization for more details."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION."]
    #[doc = ""]
    #[doc = " @return The relative x movement since the last event"]
    pub fn libinput_event_pointer_get_dx(event: *mut libinput_event_pointer) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the delta between the last event and the current event. For pointer"]
    #[doc = " events that are not of type @ref LIBINPUT_EVENT_POINTER_MOTION, this"]
    #[doc = " function returns 0."]
    #[doc = ""]
    #[doc = " If a device employs pointer acceleration, the delta returned by this"]
    #[doc = " function is the accelerated delta."]
    #[doc = ""]
    #[doc = " Relative motion deltas are to be interpreted as pixel movement of a"]
    #[doc = " standardized mouse. See @ref motion_normalization for more details."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION."]
    #[doc = ""]
    #[doc = " @return The relative y movement since the last event"]
    pub fn libinput_event_pointer_get_dy(event: *mut libinput_event_pointer) -> f64;
}
extern "C" {
    #[doc = " @ingroup event_pointer"]
    #[doc = ""]
    #[doc = " Return the relative delta of the unaccelerated motion vector of the"]
    #[doc = " current event. For pointer events that are not of type @ref"]
    #[doc = " LIBINPUT_EVENT_POINTER_MOTION, this function returns 0."]
    #[doc = ""]
    #[doc = " Relative unaccelerated motion deltas are raw device coordinates."]
    #[doc = " Note that these coordinates are subject to the device's native"]
    #[doc = " resolution. Touchpad coordinates represent raw device coordinates in the"]
    #[doc = " X resolution of the touchpad. See @ref motion_normalization for more"]
    #[doc = " details."]
    #[doc = ""]
    #[doc = " Any rotation applied to the device also applies to unaccelerated motion"]
    #[doc = " (see libinput_device_config_rotation_set_angle())."]
    #[doc = ""]
    #[doc = " @note It is an application bug to call this function for events other than"]
    #[doc = " @ref LIBINPUT_EVENT_POINTER_MOTION."]
    #[doc = ""]
    #[doc = " @return The unaccelerated relative x movement since the last event"]
    pub fn libinput_event_pointer_get_dx_unaccelerated(event: *mut libinput_event_pointer) -> f64;
}
